remove SSE in master and worker protocol
